--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tonejs/midi": "^2.0.28",
     "lucide-react": "^0.561.0",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "react-router-dom": "^7.11.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
